# AS

./: ModelingAgent_baseline.py  RecAgent_baseline.py  python-publish.yml
docs/: _config.yml  index.html
docs/assets/css/: style.css
docs/assets/data/: behavior_leaderboard.csv  recommendation_leaderboard.csv
docs/assets/js/: main.js
docs/pages/: discussion.html  leaderboards.html  modeling-track.html  overview.html  recommendation-track.html  submission-guidelines.html
lot/: 1.py  README.md  RecAgent_baseline.py  data_process.py  evaluation_tool.py  old_userBehaviorSimulation.py  ollama_model.md  pyproject.toml  requirements.txt  simulator.py  test_simulation_agent.py  use_example_data.py  测试.py
tutorials/: agent_development.md  data_preparation.md
websocietysimulator/: __init__.py  simulator.py
websocietysimulator/agent/: __init__.py  agent.py  recommendation_agent.py  simulation_agent.py
websocietysimulator/agent/modules/: __init__.py  memory_modules.py  planning_modules.py  reasoning_modules.py  tooluse_modules.py  tooluse_pool.py
websocietysimulator/llm/: __init__.py  infinigence_embeddings.py  llm.py
websocietysimulator/tasks/: __init__.py  recommendation_task.py  simulation_task.py
websocietysimulator/tools/: __init__.py  cache_interaction_tool.py  example_data_interaction.py  interaction_tool.py
