[virtualenvs]
in-project = true

[tool.poetry]
name = "websocietysimulator"
version = "0.1.0"
description = "Web Social Simulator for WWW'25 AgentSociety Challenge"
authors = ["Yuwei Yan <yyan791@connect.hkust-gz.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "1.5.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
nltk = "^3.9.1"
transformers = "^4.47.0"
sentence-transformers = "^3.3.1"
openai = "^1.58.1"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-chroma = "^0.1.4"
torch = "^2.5.1"
lmdb = "^1.6.2"
requests = "^2.32.3"
numpy = "^1.23"


[build-system]
requires = ["poetry-core>=1.1.0", "poetry>=1.1.0,<1.9.0"]
build-backend = "poetry.core.masonry.api"
